* Fix comment field overflow at ImportTransactionItem and TransactionListItem components

--- a/src/view/Components/Import/TransactionItem/style.scss
+++ b/src/view/Components/Import/TransactionItem/style.scss
@@ -56,6 +56,7 @@
     align-items: center;
     justify-content: flex-start;
     width: 32px;
+    flex-shrink: 0;
 
     .checkbox {
       --checkbox-size: 24px;
