--- a/src/view/Components/TransactionListItem/style.scss
+++ b/src/view/Components/TransactionListItem/style.scss
@@ -38,6 +38,7 @@
   position: relative;
   row-gap: 2px;
   flex: 1 1 auto;
+  overflow: hidden;
 }
 
 .trans-item__controls {
